--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
 <title>QR Clue — Halloween Hunt</title>
+
+<!-- PWA (full-screen like Amazon) -->
+<link rel="manifest" href="/manifest.webmanifest">
+<meta name="theme-color" content="#000000">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="🎃 Hunt Scanner">
+<link rel="apple-touch-icon" href="/icons/icon-192.png">
+
 <style>
   :root{ --bg:#0b0f14; --text:#f3f6fb; --accent:#ff6a00; }
   *{box-sizing:border-box}
   html,body{height:100%;margin:0;background:var(--bg);color:var(--text);
     font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif}
 
-  /* Fullscreen layers */
   .layer{position:fixed; inset:0; display:flex; align-items:center; justify-content:center; padding:24px; min-height:100svh; min-height:100dvh;}
   .layer::after{ content:""; position:fixed; left:0; right:0; bottom:0; height:env(safe-area-inset-bottom); background:#000; pointer-events:none; }
 
@@ -20,7 +28,6 @@
            transition:opacity 1.2s ease, filter 1.2s ease, transform 1.2s ease;}
   #content.reveal{opacity:1; filter:blur(0); transform:translateY(0);}
 
-  /* Start card */
   .card{ width:min(820px,92vw); background:rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.12);
     border-radius:16px; padding:20px; text-align:center; box-shadow:0 12px 28px rgba(0,0,0,.45); }
   .title{font-size:1.35rem; font-weight:900; margin-bottom:8px}
@@ -30,13 +37,11 @@
     color:#1a1a1a; background:linear-gradient(135deg, var(--accent), #ff9f1a);
     box-shadow:0 8px 18px rgba(255,106,0,.35), inset 0 1px 0 rgba(255,255,255,.25); }
 
-  /* Full-bleed video */
   .video-wrap{position:fixed; inset:0; width:100vw; height:100svh; height:100dvh;}
   video{ position:absolute; left:0; top:0; width:100%; height:100%;
          object-fit:cover; object-position:center; background:#000; transition:opacity .9s ease; }
   .fade-out{ opacity:0; }
 
-  /* Clue card */
   .clue-card{ width:min(820px,92vw); background:rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.12);
     border-radius:16px; padding:20px; box-shadow:0 12px 28px rgba(0,0,0,.45); }
   .clue-title{ font-weight:900; margin-bottom:6px }
@@ -45,7 +50,6 @@
 </head>
 <body>
 
-<!-- Start -->
 <div id="gate" class="layer">
   <div class="card">
     <div class="title">🎃 Halloween Hunt Start</div>
@@ -54,15 +58,12 @@
   </div>
 </div>
 
-<!-- Video -->
 <div id="player" class="layer">
   <div class="video-wrap">
-    <!-- Keep halloween.mp4 next to this file -->
     <video id="vid" src="./halloween.mp4" playsinline preload="auto"></video>
   </div>
 </div>
 
-<!-- Clue -->
 <div id="content" class="layer">
   <div class="clue-card">
     <div class="clue-title">👻 Your Hunt Begins</div>
@@ -82,7 +83,7 @@ const content = document.getElementById('content');
 const startBtn = document.getElementById('start');
 const vid = document.getElementById('vid');
 
-const VIDEO_LEN_MS = 25000; // adjust to your clip length in ms
+const VIDEO_LEN_MS = 25000;
 let fadeTimeout, endTimeout;
 
 function show(el){ el.style.display='flex'; }
@@ -113,7 +114,6 @@ function begin(){
   if (p && typeof p.then === 'function'){
     p.then(()=> scheduleFinish())
      .catch(()=>{
-       // iOS requires a user gesture: if blocked, a tap on video starts it
        vid.addEventListener('click', ()=> vid.play().then(()=> scheduleFinish()), { once:true });
      });
   } else {
@@ -121,7 +121,6 @@ function begin(){
   }
 }
 
-// Keep wrapper perfectly tall if iOS viewport changes
 function setVH(){
   const h = Math.max(window.innerHeight, document.documentElement.clientHeight || 0);
   document.querySelector('.video-wrap').style.height = h + 'px';
