--- a/scanner.html
+++ b/scanner.html
@@ -4,8 +4,12 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
 <title>🎃 Hunt Scanner</title>
+<link rel="manifest" href="/manifest.webmanifest">
+<meta name="theme-color" content="#000000">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="🎃 Hunt Scanner">
+<link rel="apple-touch-icon" href="/icons/icon-192.png">
 <style>
   :root{ --text:#f3f6fb; --muted:#d0d7e2; }
   *{box-sizing:border-box}
