--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
     color:#1a1a1a; background:linear-gradient(135deg, var(--accent), #ff9f1a);
     box-shadow:0 8px 18px rgba(255,106,0,.35), inset 0 1px 0 rgba(255,255,255,.25); }
 
-  .note{font-size:0.8rem; opacity:0.75; margin-top:6px;}
-
   .video-wrap{position:fixed; inset:0; width:100vw; height:100svh; height:100dvh;}
   video{ position:absolute; left:0; top:0; width:100%; height:100%;
          object-fit:cover; object-position:center; background:#000; transition:opacity .9s ease; }
@@ -57,7 +55,6 @@
     <div class="title">🎃 Halloween Hunt Start</div>
     <div class="meta">Tap the button to start the <strong>October 2025 Halloween Scavenger Hunt Experience</strong>. Winner gets a <strong>$25 gift card!</strong></div>
     <button id="start" class="btn"><span>🕷️</span> Start the Spook</button>
-    <div class="note">Note: turn your sound up!</div>
   </div>
 </div>
 
@@ -72,15 +69,10 @@
     <div class="clue-title">👻 Your Hunt Begins</div>
     <div class="clue-text">Welcome to the October 2025 Halloween Scavenger Hunt.
 
-How To Play:
-Find a hidden QR code, solve its puzzle, and unlock a clue to the next QR code.
-First one to solve all the clues will find the $25 gift card hidden in the end.
-
 Rules:
-There are no QR codes in
-- Any Bedrooms
-- The Office
-So, no need to go in those rooms to find any.</div>
+- No bedrooms.
+- Nothing in the office.
+- Everywhere else fair game.</div>
   </div>
 </div>
 
