--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <div class="title">🎃 Halloween Hunt Start</div>
     <div class="meta">Tap the button to start the <strong>October 2025 Halloween Scavenger Hunt Experience</strong>. Winner gets a <strong>$25 gift card!</strong></div>
     <button id="start" class="btn"><span>🕷️</span> Start the Spook</button>
+    <div class="note">Note: turn your sound up!</div>
   </div>
 </div>
 
@@ -69,10 +70,15 @@
     <div class="clue-title">👻 Your Hunt Begins</div>
     <div class="clue-text">Welcome to the October 2025 Halloween Scavenger Hunt.
 
+How To Play:
+Find a hidden QR code, solve its puzzle, and unlock a clue to the next QR code.
+First one to solve all the clues will find the $25 gift card hidden in the end.
+
 Rules:
-- No bedrooms.
-- Nothing in the office.
-- Everywhere else fair game.</div>
+There are no QR codes in
+- Any bedrooms.
+- The office.
+So, no need to go in those rooms to find any.</div>
   </div>
 </div>
 
