--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ if (continueSpook && hubBlock && clueBlock && intro && introVid){
 }
 
 enterHub.addEventListener('click', () => {
-  window.location.href = 'https://murresta13.github.io/main-hub/?v=3';
+  window.location.href = 'https://murresta13.github.io/main-hub/';
 });
 </script>
 </body>
